2003-08-29  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c: Test HAVE_DECL__SNPRINTF instead of HAVE__SNPRINTF.
	Test HAVE_DECL__SNWPRINTF instead of HAVE__SNWPRINTF.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (local_wcslen): Protect against multiple definition.
	(USE_SNPRINTF): Define also if only _snprintf() is available.
	(SNPRINTF): Possibly define as _snprintf or _snwprintf.
	* configure.ac: Also check for _snprintf.

2003-08-11  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (local_wcslen): New function, for Solaris 2.5.1.
	(VASNPRINTF): Use it instead of wcslen.
	* configure.ac: Also check for wcslen.
	* Makefile.am (config.h_vms): Set HAVE_WCSLEN.
	(config.h.msvc): Likewise.

2003-06-20  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_PRINTF_POSIX.
	* lib-asprintf.h: Ignore an existing vasprintf() if it doesn't support
	POSIX/XSI format strings.
	* lib-asprintf.c: Likewise.
	* Makefile.am (config.h_vms): Define HAVE_POSIX_PRINTF.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* configure.ac (jm_AC_TYPE_LONG_LONG): Replaces gt_TYPE_LONGLONG.
	* printf-args.c: Generalize to it can be compiled for wide strings.
	(PRINTF_PARSE, CHAR_T, DIRECTIVE, DIRECTIVES): New macros.
	* vasnprintf.c: Generalize to it can be compiled for wide strings.
	(VASNPRINTF, CHAR_T, DIRECTIVE, DIRECTIVES, PRINTF_PARSE, USE_SNPRINTF,
	SNPRINTF): New macros.
	Don't include <alloca.h> if the file is used inside libintl.

2003-05-30  Bruno Haible  <bruno@clisp.org>

	* autosprintf.texi: Tweak @dircategory and @direntry.
	Reported by Karl Berry <karl@freefriends.org>.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc, autosprintf.h.msvc-shared):
	Don't use $< here.

2003-05-19  Bruno Haible  <bruno@clisp.org>

	* windows/asprintf.rc: Include <winver.h>.
	Reported by Perry Rapp.

2003-05-18  Bruno Haible  <bruno@clisp.org>
