@@ -68,7 +68,8 @@ AC_EGREP_CPP([Need own alloca], [
   ALLOCA_H=)
 AC_SUBST([ALLOCA_H])
 
-AC_CHECK_FUNCS([snprintf vasprintf wcslen _snprintf])
+AC_CHECK_FUNCS([snprintf vasprintf wcslen])
+AC_CHECK_DECLS([_snprintf])
 gt_PRINTF_POSIX
 
 dnl Check for tools needed for formatting the documentation.
